PP-1 correção de baseUrl e adição de infra

--- a/source/web/app/components/alert/app-alert.component.html
+++ b/source/web/app/components/alert/app-alert.component.html
@@ -1,1 +1,1 @@
-﻿<div *ngIf="message" [ngClass]="message.cssClass">{{message.text}}</div>
+﻿<div fxLayoutAlign="center center" *ngIf="message" [ngClass]="message.cssClass">{{message.text}}</div>
