--- a/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.css
+++ b/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.css
@@ -6,3 +6,7 @@
   background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
   background-size: cover;
 }
+
+::ng-deep .mat-card-header-text {
+  margin: 0 !important;
+}
