--- a/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
+++ b/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
@@ -3,7 +3,7 @@
     <div mat-card-avatar ><mat-icon>description</mat-icon></div>
     <div fxFlex>
       <mat-card-title>{{data.event.acronym}}-{{data.event.name}}</mat-card-title>
-      <mat-card-subtitle>Criado em: {{data.date | date : "dd/mm/yyy HH:mm"}}</mat-card-subtitle>
+      <mat-card-subtitle>Criado em: {{data.date | date : "dd/MM/yyy HH:mm"}}</mat-card-subtitle>
     </div>
     <button mat-fab class="mat-mini-fab" matTooltip="Preencher atividade" aria-label="Preencher atividade" on-click="callPreview()" [disabled]="data.status !== 'PENDING'">
       <mat-icon>play_circle_outline</mat-icon>
