--- a/source/web/app/components/account/create-account/create-account.component.html
+++ b/source/web/app/components/account/create-account/create-account.component.html
@@ -1,13 +1,16 @@
 <div class="account-page creation">
   <div class="content">
-    <mat-card class="mat-elevation-z11" fxFlex.gt-md="40" fxFlex.gt-sm="50" fxFlex.gt-xs="60" fxFlex.gt-lg="30" fxFlex="90">
+    <mat-card class="mat-elevation-z11" fxFlex.gt-md="40" fxFlex.gt-sm="50" fxFlex.gt-xs="60" fxFlex.gt-lg="30"
+              fxFlex="90">
       <mat-card-title>{{ title }}</mat-card-title>
       <mat-card-content fxLayout="column">
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
           <p>
             <mat-form-field fxFlex>
               <input type="password" matInput placeholder="Senha" formControlName="password">
-              <mat-hint>A senha deve conter no mínimo 8 caracteres com pelo menos uma letra maiúscula, uma minúscula e um caractere especial</mat-hint>
+              <mat-hint>A senha deve conter no mínimo 8 caracteres com pelo menos uma letra maiúscula, uma minúscula e
+                um caractere especial
+              </mat-hint>
               <mat-error *ngIf="f.password.hasError('required')">
                 <span [innerHTML]="requiredMessage | sanitizeHtml"></span>
               </mat-error>
@@ -15,7 +18,8 @@
                 Senhas diferentes
               </mat-error>
               <mat-error *ngIf="f.password.hasError('pattern')">
-                A senha deve conter no mínimo 8 caracteres com pelo menos uma letra maiúscula, uma minúscula e um caractere especial
+                A senha deve conter no mínimo 8 caracteres com pelo menos uma letra maiúscula, uma minúscula e um
+                caractere especial
               </mat-error>
             </mat-form-field>
           </p>
@@ -32,7 +36,9 @@
           </p>
           <div fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
             <div class="button">
-              <button type="submit" mat-button fxFlexFill mat-raised-button color="primary" [disabled]="registerForm.invalid">Cadastrar</button>
+              <button type="submit" mat-button fxFlexFill mat-raised-button color="primary"
+                      [disabled]="registerForm.invalid">Cadastrar
+              </button>
             </div>
           </div>
         </form>
