AP-5 Observable síncrono e mudança na visualização do botão de solicitação

--- a/source/web/app/components/account/login/login.component.html
+++ b/source/web/app/components/account/login/login.component.html
@@ -30,8 +30,8 @@
             </mat-form-field>
           </p>
           <div fxLayout="row" fxLayoutAlign="space-between">
-            <button mat-icon-button color="primary" (click)="redirectToRecoveryPassword()">
-              <mat-icon>vpn_key</mat-icon>
+            <button mat-button color="primary" (click)="redirectToRecoveryPassword()">
+              Esqueci minha senha
             </button>
             <div class="button">
               <button [disabled]="loading" type="submit" mat-button fxFlexFill class="mat-raised-button mat-primary">
