AP-5 limpeza no código e ajustes no template

--- a/source/web/app/components/account/login/login.component.html
+++ b/source/web/app/components/account/login/login.component.html
@@ -31,7 +31,7 @@
           </p>
           <div fxLayout="row" fxLayoutAlign="space-between">
             <button mat-button color="primary" (click)="redirectToRecoveryPassword()">
-              Esqueci minha senha
+              <small>Esqueci minha senha</small>
             </button>
             <div class="button">
               <button [disabled]="loading" type="submit" mat-button fxFlexFill class="mat-raised-button mat-primary">
