--- a/source/web/app/components/account/recovery-password/recovery-password.component.html
+++ b/source/web/app/components/account/recovery-password/recovery-password.component.html
@@ -8,10 +8,10 @@
             <mat-form-field>
               <input type="text" matInput placeholder="Email" formControlName="email">
               <mat-error i18n="email-login"
-                         *ngIf="f.email.hasError('email') && !f.email.hasError('required')">
+                         *ngIf="rpForm.email.hasError('email') && !rpForm.email.hasError('required')">
                 Email invalido!
               </mat-error>
-              <mat-error *ngIf="f.email.hasError('required')">
+              <mat-error *ngIf="rpForm.email.hasError('required')">
                 <span [innerHTML]="requiredMessage | sanitizeHtml"></span>
               </mat-error>
             </mat-form-field>
@@ -32,4 +32,3 @@
     </mat-card>
   </div>
 </div>
-
