AP-5 type=buttom para direcionar tecla enter para os buttons de submits

--- a/source/web/app/components/account/login/login.component.html
+++ b/source/web/app/components/account/login/login.component.html
@@ -30,7 +30,7 @@
             </mat-form-field>
           </p>
           <div fxLayout="row" fxLayoutAlign="space-between">
-            <button mat-button color="primary" (click)="redirectToRecoveryPassword()">
+            <button type="button" mat-button color="primary" (click)="redirectToRecoveryPassword()">
               <small>Esqueci minha senha</small>
             </button>
             <div class="button">
