--- a/source/web/app/components/account/recovery-password/recovery-password.component.html
+++ b/source/web/app/components/account/recovery-password/recovery-password.component.html
@@ -17,7 +17,7 @@
             </mat-form-field>
           </p>
           <div fxLayout="row" fxLayoutAlign="space-between">
-            <button mat-icon-button color="primary" (click)="redirectToLogin()">
+            <button type="button" mat-icon-button color="primary" (click)="redirectToLogin()">
               <mat-icon>arrow_back</mat-icon>
             </button>
             <div class="button">
