AP-6 Inserção do botão de contato

--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -4,6 +4,7 @@
       <span id="title">{{ title }}</span>
       <span fxFlex></span>
       <div fxFlex="" fxLayoutAlign="end center" fxLayoutGap="10px">
+        <button mat-button (click)="goToContact()">Contato</button>
         <button mat-button [matMenuTriggerFor]="menu">
           <mat-icon aria-hidden="false" aria-label="user" matBadgeOverlap="false" matBadgeColor="warn"
                     matBadgePosition="before">account_circle</mat-icon>
