--- a/source/web/app/components/contact-project/contact-project.component.html
+++ b/source/web/app/components/contact-project/contact-project.component.html
@@ -3,19 +3,28 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 5fr 5fr;
-    grid-template-areas: "title title title title";
+    grid-template-areas:
+      "title title title title"
+      "formContact formContact formContact formContact"
   }
 
   .title {
     grid-area: title;
     display:flex;
     justify-content: space-between;
-
   }
 
-  .btn-new-contact {
-    grid-area: btnNewContact;
+  .card-form-contact {
+    grid-area: formContact;
+    margin: 10px;
   }
+
+  .form-contact {
+    display: flex;
+    flex-direction: column;
+  }
+
+
 </style>
 
 
@@ -24,4 +33,20 @@
     <span>Contato com o Projeto</span>
     <button mat-button color="primary">Novo</button>
   </mat-toolbar>
+  <mat-card class="card-form-contact">Solicitação de Chamado
+    <form  class="form-contact"[formGroup]="contactProjectForm" (ngSubmit)="onSubmit()">
+      <mat-form-field  appearance="legacy">
+        <mat-label>Titulo da situação</mat-label>
+        <input matInput #input maxlength="120" placeholder="Ex. Não consigo visualizar atividades">
+        <mat-hint align="end">{{input.value?.length || 0}}/120</mat-hint>
+      </mat-form-field>
+
+      <mat-form-field appearance="legacy">
+        <mat-label>Descreva a situação</mat-label>
+        <textarea matInput rows="5"></textarea>
+      </mat-form-field>
+      <button type="submit" mat-button color="primary">ENVIAR</button>
+    </form>
+  </mat-card>
+
 </section>
