--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -1,10 +1,10 @@
 <div  fxLayout="column" fxFlexFill >
   <mat-toolbar color="primary" *ngIf="currentUser">
     <mat-toolbar-row fxLayoutAlign="start center" fxLayoutGap="10px">
-      <span id="title">{{ title }}</span>
+      <a routerLink="/dashboard/tasks" id="title">{{ title }}</a>
       <span fxFlex></span>
       <div fxFlex="" fxLayoutAlign="end center" fxLayoutGap="10px">
-        <button mat-button (click)="goToContact()">Contato</button>
+        <button mat-button (click)="redirectToContactProject()">Contato</button>
         <button mat-button [matMenuTriggerFor]="menu">
           <mat-icon aria-hidden="false" aria-label="user" matBadgeOverlap="false" matBadgeColor="warn"
                     matBadgePosition="before">account_circle</mat-icon>
