--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -1,13 +1,17 @@
 <style>
   .cp-layout {
     display: grid;
+    height: 100vh;
+    background-color: #f3f3f3;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 5fr 5fr;
+    grid-template-rows: 1fr 5fr 5fr 3fr;
     grid-template-areas:
       "title title title title"
       "formContact formContact formContact formContact"
       "historic historic historic historic"
   }
+
+
 
   .title {
     grid-area: title;
@@ -27,6 +31,12 @@
 
   .historic {
     grid-area: historic;
+    margin: 10px;
+  }
+
+  .subtitle {
+    display: flex;
+    flex-direction: row-reverse;
   }
 
 
@@ -39,7 +49,8 @@
     <button mat-button color="primary">Novo</button>
   </mat-toolbar>
 
-  <mat-card class="card-form-contact">Solicitação de Chamado
+  <mat-card class="card-form-contact">
+    <mat-card-subtitle class="subtitle">Solicitação de Chamado</mat-card-subtitle>
     <form class="form-contact" [formGroup]="projectContactForm" (ngSubmit)="onSubmit()">
       <mat-form-field  appearance="legacy">
         <mat-label>Titulo</mat-label>
@@ -54,7 +65,8 @@
       <button type="submit" mat-button color="primary">ENVIAR</button>
     </form>
   </mat-card>
-  <mat-card class="historic">Histórico
+  <mat-card class="historic">
+    <mat-card-subtitle class="subtitle">Histórico</mat-card-subtitle>
     <mat-nav-list>
       <mat-list-item *ngFor="let contact of projectContacts">
         <a matLine (click)="viewContact()">{{contact.title}}</a>
@@ -63,5 +75,7 @@
     </mat-nav-list>
 
   </mat-card>
+
+
 
 </section>
