--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -3,12 +3,12 @@
     display: grid;
     height: 100vh;
     background-color: #f3f3f3;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 5fr 5fr 3fr;
+    grid-template-columns: 9.5fr .5fr;
+    grid-template-rows: 1fr .1fr 3fr 5fr 3fr;
     grid-template-areas:
-      "title title title title"
-      "formContact formContact formContact formContact"
-      "historic historic historic historic"
+      "title solicitation"
+      "formContact formContact"
+      "historic historic"
   }
 
   .title {
@@ -32,12 +32,23 @@
     margin: 8px;
   }
 
-  .subtitle {
+  .solicitation-subtitle {
+    display: flex;
+    flex-direction: column-reverse;
+    grid-area: solicitation;
+    margin: 20px;
+
+  }
+
+  .history-subtitle {
     display: flex;
     flex-direction: row-reverse;
+    grid-area: subtitle;
+    margin-right: 20px;
   }
+
   .contactItem{
-    margin: 10px;
+    margin-top: 5px;
   }
 </style>
 
@@ -45,27 +56,43 @@
 <section class="cp-layout">
   <mat-toolbar class="title">
     <span>Contato com o Projeto</span>
-    <button mat-button color="primary">Novo</button>
   </mat-toolbar>
+  <span class="mat-card-subtitle solicitation-subtitle">Solicitação</span>
+  <mat-card class="card-form-contact" *ngIf="!viewCallFormState">
+    <mat-card-header>
+      <mat-card-subtitle>Instruções de Uso</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p><i>Caso esteja acessando este módulo pela primeira vez, e precise contactar-se com o projeto para informar alguma anomalia do sistema ou simplesmente tentar solucionar uma dúvida,
+        clique no botão "criar chamado" para acessar o formulário de solicitação.
+      </i></p>
 
-  <mat-card class="card-form-contact">
-    <mat-card-subtitle class="subtitle">Solicitação</mat-card-subtitle>
+      <p><i>Caso queira somente ver a respostas dos especialistas em relação aos chamados criados, vá para
+        a seção de histórico e expanda um ou mais titulos.</i>obs: é possivel dar réplica para as respostas
+        que vem do projeto</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button mat-raised-button color="primary"(click)="accessCallForm()">ABRIR CHAMADO</button>
+    </mat-card-actions>
+  </mat-card>
+
+  <mat-card class="card-form-contact" *ngIf="viewCallFormState">
     <form class="form-contact" [formGroup]="projectContactForm" (ngSubmit)="onSubmit()">
-      <mat-form-field  appearance="legacy">
-        <mat-label>Titulo</mat-label>
-        <input matInput #input maxlength="120" placeholder="Ex. Não consigo visualizar atividades">
-        <mat-hint align="end">{{input.value?.length || 0}}/120</mat-hint>
-      </mat-form-field>
+            <otus-input-text title="Titulo" controlName="title"
+                       [formGroup]="projectContactForm"
+                       placeholder="Ex. Não consigo visualizar atividades">
+      </otus-input-text>
 
       <mat-form-field appearance="legacy">
         <mat-label>Descreva a situação</mat-label>
-        <textarea matInput rows="5"></textarea>
+        <textarea matInput rows="4"></textarea>
       </mat-form-field>
       <button type="submit" mat-button color="primary">CRIAR CHAMADO</button>
     </form>
+
   </mat-card>
   <div class="historic">
-    <mat-card-subtitle class="subtitle">Histórico</mat-card-subtitle>
+    <mat-card-subtitle class="history-subtitle">Histórico</mat-card-subtitle>
         <mat-accordion  *ngFor="let contact of projectContacts">
           <mat-expansion-panel class="contactItem">
             <mat-expansion-panel-header>
@@ -77,6 +104,8 @@
             </mat-expansion-panel-header>
             <p>Mensagem: {{contact.message}}</p>
             <p>Criada em: {{contact.creationDate}}</p>
+            <p>Por: {{contact.sender}}</p>
+            <p>{{contact}}</p>
           </mat-expansion-panel>
         </mat-accordion>
   </div>
