--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -5,15 +5,12 @@
     background-color: #f3f3f3;
     grid-template-columns: 9.5fr .5fr;
     grid-template-rows: 1fr .1fr 3fr 5fr 3fr;
-    grid-template-areas:
-      "title solicitation"
-      "formContact formContact"
-      "historic historic"
+    grid-template-areas: "title solicitation" "formContact formContact" "historic historic"
   }
 
   .title {
     grid-area: title;
-    display:flex;
+    display: flex;
     justify-content: space-between;
   }
 
@@ -47,7 +44,7 @@
     margin-right: 20px;
   }
 
-  .contactItem{
+  .contactItem {
     margin-top: 5px;
   }
 </style>
@@ -63,7 +60,8 @@
       <mat-card-subtitle>Instruções de Uso</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <p><i>Caso esteja acessando este módulo pela primeira vez, e precise contactar-se com o projeto para informar alguma anomalia do sistema ou simplesmente tentar solucionar uma dúvida,
+      <p><i>Caso esteja acessando este módulo pela primeira vez, e precise contactar-se com o projeto para informar
+        alguma anomalia do sistema ou simplesmente tentar solucionar uma dúvida,
         clique no botão "criar chamado" para acessar o formulário de solicitação.
       </i></p>
 
@@ -72,41 +70,46 @@
         que vem do projeto</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button mat-raised-button color="primary"(click)="accessCallForm()">ABRIR CHAMADO</button>
+      <button mat-button mat-raised-button color="primary" (click)="accessCallForm()">ABRIR CHAMADO</button>
     </mat-card-actions>
   </mat-card>
 
   <mat-card class="card-form-contact" *ngIf="viewCallFormState">
     <form class="form-contact" [formGroup]="projectContactForm" (ngSubmit)="onSubmit()">
-            <otus-input-text title="Titulo" controlName="title"
+
+      <otus-input-text title="Titulo"
+                       controlName="title"
                        [formGroup]="projectContactForm"
-                       placeholder="Ex. Não consigo visualizar atividades">
+                       placeholder="Ex. Atividades não aparecem">
       </otus-input-text>
 
-      <mat-form-field appearance="legacy">
-        <mat-label>Descreva a situação</mat-label>
-        <textarea matInput rows="4"></textarea>
-      </mat-form-field>
+      <otus-input-text-area title="Descreva a situação"
+                            controlName="description"
+                            [formGroup]="projectContactForm"
+                            rows=3
+                            placeholder="Ex. Quando entro no sistema via 3g não estou conseguindo visualizar atividades">
+      </otus-input-text-area>
+
       <button type="submit" mat-button color="primary">CRIAR CHAMADO</button>
     </form>
 
   </mat-card>
   <div class="historic">
     <mat-card-subtitle class="history-subtitle">Histórico</mat-card-subtitle>
-        <mat-accordion  *ngFor="let contact of projectContacts">
-          <mat-expansion-panel class="contactItem">
-            <mat-expansion-panel-header>
-              <mat-panel-title>
-                <mat-icon *ngIf="contact.status === 'OPEN'" >local_library</mat-icon>
-                <mat-icon *ngIf="contact.status !== 'OPEN'">verified_user</mat-icon>
-                {{contact.title}}
-              </mat-panel-title>
-            </mat-expansion-panel-header>
-            <p>Mensagem: {{contact.message}}</p>
-            <p>Criada em: {{contact.creationDate}}</p>
-            <p>Por: {{contact.sender}}</p>
-            <p>{{contact}}</p>
-          </mat-expansion-panel>
-        </mat-accordion>
+    <mat-accordion *ngFor="let contact of projectContacts">
+      <mat-expansion-panel class="contactItem">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <mat-icon *ngIf="contact.status === 'OPEN'">local_library</mat-icon>
+            <mat-icon *ngIf="contact.status !== 'OPEN'">verified_user</mat-icon>
+            {{contact.title}}
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <p>Mensagem: {{contact.message}}</p>
+        <p>Criada em: {{contact.creationDate}}</p>
+        <p>Por: {{contact.sender}}</p>
+        <p>{{contact}}</p>
+      </mat-expansion-panel>
+    </mat-accordion>
   </div>
 </section>
