--- a/source/web/app/shared/components/fields/input-text/input-text.component.html
+++ b/source/web/app/shared/components/fields/input-text/input-text.component.html
@@ -6,8 +6,8 @@
            [name]="controlName"
            [formControlName]="controlName">
     <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl,'required')">Campo obrigatório</mat-error>
-    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'minlength')">Campo precisa ter no mínimo # caracteres</mat-error>
-    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'maxlength')">Campo pode ter no máximo # caracteres</mat-error>
+    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'minlength')">valor mínimo de caracteres:  {{fieldValidator.lengthValidate(formControl, 'minlength')}}</mat-error>
+    <mat-error *ngIf="fieldValidator.hasErrorValidate(formControl, 'maxlength')">valor máximo de caracteres: {{fieldValidator.lengthValidate(formControl, 'maxlength')}}</mat-error>
   </mat-form-field>
 </div>
 
