AP-6 Preparação estrutural para usar container json-server para construção e testes com observables

--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -1,1 +1,3 @@
-<p>project-contact-item works!</p>
+<p>Mensagem: {{contactItem.message}}</p>
+<p>Criada em: {{contactItem.creationDate}}</p>
+<p>Por: {{contactItem.sender}}</p>
