--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -132,7 +132,7 @@
       <mat-expansion-panel class="contactItem">
         <mat-expansion-panel-header>
           <mat-panel-title class="historic-panel-title">
-            <mat-chip-list aria-label="Fish selection">
+            <mat-chip-list aria-label="status contact">
               <mat-chip color="primary" selected *ngIf="contact.status === 'OPEN'">Aberto</mat-chip>
               <mat-chip color="none" selected *ngIf="contact.status !== 'OPEN'">Fechado</mat-chip>
             </mat-chip-list>
