--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: .5fr .5fr .5fr 1fr;
-    grid-template-areas: "mainMessage" "info" "lastFeedBack" "feedBack"
+    grid-template-areas: "info" "mainMessage" "lastFeedBack" "feedBack"
   }
 
   .main-message {
@@ -28,58 +28,64 @@
 
   .feed-back-form {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
     flex-grow: 1;
-
   }
 
-  .feed-back-input{
-    flex-grow: 4
+  .btn-answser-form {
+    display: flex;
+    flex-direction: row-reverse;
   }
 
+  .mat-icon-button {
+    margin-left: 20px;
+  }
 
 </style>
 
 <section class="pci-layout">
+  <div class="info">
+    <span class="mat-body-2 creation-date">26/05/2020 {{contactItem.creationDate}}</span>
+    <mat-chip-list aria-label="more info" class="more-info">
+      <mat-chip>+ informações</mat-chip>
+    </mat-chip-list>
+  </div>
   <span class="mat-h4 main-message">{{contactItem.message}}
     <mat-divider></mat-divider>
   </span>
-  <div class="info">
-    <span class="mat-body-2 sender">Criado por: {{contactItem.sender}}</span>
-    <span class="mat-body-2 creation-date">em:{{contactItem.creationDate}}</span>
-    <mat-chip-list aria-label="more info" class="more-info">
-      <mat-chip>+ info</mat-chip>
-    </mat-chip-list>
+
+  <div class="last-feed-back">
+    <span class="mat-card-subtitle last-feed-back">Última mensagem | 26/05/2020 | fulano@email.com</span>
+    <span class="mat-body-2">
+    Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Delegadis gente finis, bibendum egestas augue arcu ut est. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.
+  </span>
   </div>
 
-  <span class="mat-body-2 last-feed-back">Última mensagem: espaço </span>
   <div class="mat-body-2 feed-back">
     <button *ngIf="!viewFeedBackFormState" mat-button mat-raised color="primary"
-            (click)="changeViewFeedBackFormState()">FEEDBACK
+            (click)="changeViewFeedBackFormState()">MENSAGEM
     </button>
 
     <form class="feed-back-form" *ngIf="viewFeedBackFormState" [formGroup]="feedBackForm" (ngSubmit)="onSubmit()">
-      <otus-input-text-area title="Escreva seu FeedBack class" class="feed-back-input"
+      <otus-input-text-area title="Escreva sua mensagem" class="feed-back-input"
                             controlName="feedBack"
                             [formGroup]="feedBackForm"
                             rows=3
                             placeholder="Ex. Não funcionou o procedimento, preciso de mais detalhes">
       </otus-input-text-area>
+      <div class="btn-answser-form">
+        <button mat-icon-button type="submit" mat-button color="primary">
+          <mat-icon>save</mat-icon>
+        </button>
 
-      <button mat-icon-button type="button" mat-button color="primary" (click)="changeViewFeedBackFormState()">
-        <mat-icon>undo</mat-icon>
-      </button>
+        <button mat-icon-button type="reset" mat-button color="primary" (click)="onReset()">
+          <mat-icon>clear</mat-icon>
+        </button>
 
-      <button mat-icon-button type="reset" mat-button color="primary" (click)="onReset()">
-        <mat-icon>clear</mat-icon>
-      </button>
-
-      <button mat-icon-button type="submit" mat-button color="primary">
-        <mat-icon>save</mat-icon>
-      </button>
-
-
+        <button mat-icon-button type="button" mat-button color="primary" (click)="changeViewFeedBackFormState()">
+          <mat-icon>undo</mat-icon>
+        </button>
+      </div>
     </form>
   </div>
 
