--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -17,8 +17,13 @@
   }
 
   .last-answer {
-    grid-area: lastAnswer
+    grid-area: lastAnswer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+
+
 
   .answer {
     grid-area: answer;
@@ -47,14 +52,19 @@
   <div class="info">
     <span class="mat-body-2 creation-date">{{contactItem.creationDate | date: 'dd/MM/yyyy - HH:mm'}}</span>
     <mat-chip-list aria-label="more info" class="more-info">
-      <mat-chip>+ informações</mat-chip>
+      <mat-chip>ver +</mat-chip>
     </mat-chip-list>
   </div>
   <span class="mat-h4 main-message">{{contactItem.message}}
     <mat-divider></mat-divider>
   </span>
 
-  <div class="last-answer">
+  <div class="last-answer" *ngIf="loadingLastMessage">
+    <label>carregando mensagem...</label>
+    <mat-spinner></mat-spinner>
+  </div>
+
+  <div class="last-answer" *ngIf="!loadingLastMessage">
     <span class="mat-card-subtitle last-answer">Última mensagem | Mock:26/05/2020 | Mock:fulano@email.com</span>
     <span class="mat-body-2">
     Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Delegadis gente finis, bibendum egestas augue arcu ut est. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.
@@ -67,7 +77,7 @@
     </button>
 
     <form class="answer-form" *ngIf="viewAnswerFormState" [formGroup]="answerForm" (ngSubmit)="onSubmit()">
-      <otus-input-text-area title="Escreva sua mensagem" class="answer-input"
+      <otus-input-text-area title="Escreva uma nova mensagem" class="answer-input"
                             controlName="answer"
                             [formGroup]="answerForm"
                             rows=3
