--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -4,7 +4,7 @@
     height: 100vh;
     background-color: #f3f3f3;
     grid-template-columns: 9.5fr .5fr;
-    grid-template-rows: 1fr .1fr 3fr 5fr 3fr;
+    grid-template-rows: 1fr .1fr 3fr 3fr 3fr;
     grid-template-areas: "title solicitation" "formContact formContact" "historic historic"
   }
 
@@ -38,6 +38,7 @@
 
   .contactItem {
     display: flex;
+    margin-bottom: 5px;
     margin-top: 5px;
     flex-direction: column;
     justify-content: space-between
@@ -140,7 +141,7 @@
             <span class="mat-card-subtitle">{{contact.title}}</span>
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <source-project-contact-item [contactItem]="contact"></source-project-contact-item>
+        <otus-project-contact-item [contactItem]="contact"></otus-project-contact-item>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
