--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -53,7 +53,7 @@
     <span class="mat-body-2 creation-date">{{contactItem.creationDate | date: 'dd/MM/yyyy - HH:mm'}}</span>
     <mat-chip-list aria-label="more info" class="more-info">
 <!--      <a routerLink="{{contactItem.id}}/messages"><mat-chip>ver +</mat-chip></a>-->
-      <mat-chip (click) = "goToMessages(contactItem)">ver +</mat-chip>
+      <mat-chip (click)="goToMessages(contactItem)">ver +</mat-chip>
     </mat-chip-list>
   </div>
   <span class="mat-h4 main-message">{{contactItem.message}}
@@ -66,9 +66,9 @@
   </div>
 
   <div class="last-answer" *ngIf="!loadingLastMessage">
-    <span class="mat-card-subtitle last-answer">Última mensagem | Mock:26/05/2020 | Mock:fulano@email.com</span>
+    <span class="mat-card-subtitle last-answer">Última mensagem | mock.date | Mock:fulano@email.com</span>
     <span class="mat-body-2">
-    Mussum Ipsum, cacilds vidis litro abertis. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Delegadis gente finis, bibendum egestas augue arcu ut est. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis.
+    {{contactItem.messages[0].text}}
   </span>
   </div>
 
