--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -131,17 +131,17 @@
   <div class="historic">
     <mat-card-subtitle class="history-subtitle">Histórico</mat-card-subtitle>
     <mat-accordion *ngFor="let contact of projectContacts">
-      <mat-expansion-panel class="contactItem">
+      <mat-expansion-panel class="contactItem" (opened)="ProjectContactItem.openPanel(contact)">
         <mat-expansion-panel-header>
           <mat-panel-title class="historic-panel-title">
             <mat-chip-list aria-label="status contact" class="chip">
-              <mat-chip  color="primary" selected *ngIf="contact.status === 'OPEN'">Aberto</mat-chip>
-              <mat-chip  color="none" selected *ngIf="contact.status !== 'OPEN'">Fechado</mat-chip>
+              <mat-chip color="primary" selected *ngIf="contact.status === 'OPEN'">Aberto</mat-chip>
+              <mat-chip color="none" selected *ngIf="contact.status !== 'OPEN'">Fechado</mat-chip>
             </mat-chip-list>
             <span class="mat-card-subtitle">{{contact.title}}</span>
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <otus-project-contact-item [contactItem]="contact"></otus-project-contact-item>
+          <otus-project-contact-item #ProjectContactItem [contactItem]="contact"></otus-project-contact-item>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
