--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -5,7 +5,10 @@
     background-color: #f3f3f3;
     grid-template-columns: 9.5fr .5fr;
     grid-template-rows: 1fr .1fr 3fr 3fr 3fr;
-    grid-template-areas: "title solicitation" "formContact formContact" "historic historic"
+    grid-template-areas:
+    "title solicitation"
+    "formContact formContact"
+    "historic historic"
   }
 
   .title {
