--- a/source/web/styles.css
+++ b/source/web/styles.css
@@ -6,3 +6,13 @@ body {
     display: block;
     margin: 0px;
 }
+
+.msg-sucess {
+  background-color: #3a51af;
+  color: #fff;
+}
+
+.msg-error {
+  background-color: #fd3c3f;
+  color: #fff;
+}
